Added Rohan intro

--- a/batches/1.cohort-batch-1.md
+++ b/batches/1.cohort-batch-1.md
@@ -5,3 +5,10 @@ This file contains the basic student information about the Cohort Batch 1.
 Add your introduction after the line below.
 
 <hr />
+
+Name: Rohan Kshetrimayum
+Email: rohrazer64@gmail.com
+Short Bio: just a person who loves learning techs (currently learning about linux, git/github and devops
+Educational Qualification: BA
+Social:
+  - github: https://github.com/Pro64yambung
