--- a/batches/1.cohort-batch-1.md
+++ b/batches/1.cohort-batch-1.md
@@ -3,5 +3,11 @@
 This file contains the basic student information about the Cohort Batch 1.
 
 Add your introduction after the line below.
-
+Name: Rabi Subedi Chettri
+Email: rsubedi336@gmail.com
+Short Bio: I love to learn more and more about the new technologies of this new world.
+Educational Qualification: BSC. CSIT
+Social:
+  - github: https://github.com/rabisubedichettri
+  - linkedin: https://www.linkedin.com/in/rabisubedichettri/
 <hr />
