Added BRG intro

--- a/batches/1.cohort-batch-1.md
+++ b/batches/1.cohort-batch-1.md
@@ -5,3 +5,13 @@ This file contains the basic student information about the Cohort Batch 1.
 Add your introduction after the line below.
 
 <hr />
+
+Name: Budh Ram Gurung
+Email: <your email here>
+Short Bio: <one or two line short biography>
+Educational Qualification: MCA/BE/ etc
+Social:
+  - website: <url here>  # ignore if not present
+  - github: <url here> # ignore if not present
+  - linkedin: <url here>  # ignore if not present 
+  - twitter: <url here> # ignore if not present
