added Rajiya introduction

--- a/batches/2.cohort-batch-2.md
+++ b/batches/2.cohort-batch-2.md
@@ -5,3 +5,11 @@ This file contains the basic student information about the Cohort Batch 2.
 Add your introduction after the line below.
 
 <hr />
+
+Name: Rajiya Shaik
+Email: sulthana.sk.1984@gmail.com
+Short Bio: I am enthusiastic,persistent person and looking to restart my career. 
+Educational Qualification: M.Sc,M.Ed
+Social:
+  - github: raziashaik1984
+  
