--- a/batches/2.cohort-batch-2.md
+++ b/batches/2.cohort-batch-2.md
@@ -6,10 +6,9 @@ Add your introduction after the line below.
 
 <hr />
 
-Name: Rajiya Shaik
-Email: sulthana.sk.1984@gmail.com
-Short Bio: I am enthusiastic,persistent person and looking to restart my career. 
-Educational Qualification: M.Sc,M.Ed
-Social:
+Name: Rajiya Shaik<br>
+Email: sulthana.sk.1984@gmail.com<br>
+Short Bio: I am enthusiastic,persistent person and looking to restart my career.<br>
+Educational Qualification: M.Sc,M.Ed<br>
+Social:<br>
   - github: raziashaik1984
-  
