added rishiwardhan's intro

--- a/batches/3.cohort-batch-3.md
+++ b/batches/3.cohort-batch-3.md
@@ -10,7 +10,7 @@ Add your introduction after the line below.
 Name: Rishiwardhan<br>
 Email: leerishiwardhan@gmail.com<br>
 Short Bio: I am a school student and loves to learn more things.<br>
-Educational Qualification: n/a<br>
+Educational Qualification N/A <br>
 Social:<br>
   - github: rishiwardhan
 
